ADD - Docker compose configuration file

--- a/ApiRest_SuperMarket/src/main/resources/application.properties
+++ b/ApiRest_SuperMarket/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ApiRestSupermaket
+spring.application.name=apirestsupermarket
 
 #===============================
 #DATABASE CONFIGURATION MY SQL
