--- a/ApiRest_SuperMarket/Dockerfile
+++ b/ApiRest_SuperMarket/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:21-jdk-slim
+FROM eclipse-temurin:21-jdk
 ARG JAR_FILE=target/ApiRestSupermaket-0.0.1.jar
 COPY ${JAR_FILE} app_apiSuperMarket.jar
 EXPOSE 8080
